Made nav,Homepage, and many other frontend developments

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -5,8 +5,8 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.129 0.042 264.695);
+  --background: oklch(0.1 0.02 260); 
+  --foreground: oklch(0.95 0.02 260);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
@@ -116,5 +116,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    min-height: 100vh;
   }
 }
